--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -521,8 +521,8 @@ padding-bottom: 50px;
 /*-webkit-filter: grayscale(100%); filter: grayscale(100%); transition: all 0.2s linear; opacity: .5;*/
 /*-webkit-filter: grayscale(0%); filter: grayscale(0%); opacity: 1;*/
 /*---*/
-#wrapper { position: relative; height: auto !important; min-height: 100%; height: 100%; width: 100%; display: block; overflow: hidden; background: #ffffff; }
-body, #wrapper, .footer-wrapper { opacity: 0; }
+/* #wrapper { position: relative; height: auto !important; min-height: 100%; height: 100%; width: 100%; display: block; overflow: hidden; background: #ffffff; } */
+/* body, #wrapper, .footer-wrapper { opacity: 0; } */
 #wrapper, .footer-wrapper {max-width: 1920px;margin: 0 auto;}
 .header-container {     display: flex;
     /* align-items: center; */
